# libspeakeasy2

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  README.org  flake.nix
.github/workflows/: memory_checks.yaml  release.yaml  test_compile.yaml
examples/: CMakeLists.txt  block.c  dense.c  interrupt.c  knn.c  plot_adj.h  weighted_block.c  zachary.c
include/: speak_easy_2.h
src/speakeasy2/: CMakeLists.txt  se2_core.c  se2_error_handling.h  se2_interface.c  se2_interface.h  se2_knn_graph.c  se2_label.c  se2_label.h  se2_modes.c  se2_modes.h  se2_neighborlist.c  se2_neighborlist.h  se2_order_nodes.c  se2_partitions.c  se2_partitions.h  se2_print.h  se2_random.c  se2_reweigh_graph.c  se2_reweigh_graph.h  se2_reweight_graph.c  se2_seeding.c  se2_seeding.h
